# camcommand

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: workflow.yml
camcommand/: __init__.py  acs200_protocol.py  cli.py  dump.py  exceptions.py  ihex.py  interactive.py  reflash.py  serial_manager.py
camcommand.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
camcommand/_pyupdi/: LICENSE  __init__.py
camcommand/_pyupdi/updi/: application.py  link.py  nvm.py  physical.py
examples/: basic_demo.py
